# oauth_project

./: pyproject.toml  requirements.txt
oauth_project/: asgi.py  settings.py  urls.py  wsgi.py
