[tool.poetry]
name = "oauth-project"
version = "0.1.0"
description = ""
authors = ["Zahra-Nasiri <z.nasir.8181@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
django-restframework = "^0.0.1"
drf-social-oauth2 = "^2.1.3"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
